TL-7573 dialogs: fixed alignment of buttons and selected items in rtl languages
Reviewed-on: https://review.totaralms.com/9301
Tested-by: Jenkins Automation <jenkins@totaralms.com>

--- a/theme/standardtotararesponsive/style/totara.css
+++ b/theme/standardtotararesponsive/style/totara.css
@@ -126,9 +126,6 @@ body.dir-rtl .totaratable .toolbar-right-table {
 .totara-dialog .selected {
     border-left: 1px solid #cccccc;
 }
-.totara-dialog .selected div {
-    padding-left: 3px;
-}
 .totara-dialog .treeview .unclickable,
 .totara-dialog .treeview .unclickable a {
     color: #777777;
